--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
             <ul style="list-style: none;">
                 <li>2015-2019, <a href="https://www.prvagim.si/">i. gimnazija v celju</a></li>
             </ul>
-            
+            <strong>stuff</strong>
+            <ul style="list-style: none;">
+                <li>0001, <a href="books.html" target=”_blank”>books.</a></li>
+                <li>0002, <a href="podcasts.html" target=”_blank”>podcasts.</a></li>
+            </ul>
             <div id="pantone">Pantone 530C</div>
         </div>
         <!-- <script>
