--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             </ul>
             <strong>previously</strong>
             <ul style="list-style: none;">
-                <li>2015-2019, <a href="https://www.prvagim.si/">i. gimnazija v celju</a></li>
+                <li>2015-2019, <a href="https://www.prvagim.si/" target="_blank">i. gimnazija v celju</a></li>
             </ul>
             <strong>stuff</strong>
             <ul style="list-style: none;">
-                <li>0001, <a href="books.html" target=”_blank”>books.</a></li>
-                <li>0002, <a href="podcasts.html" target=”_blank”>podcasts.</a></li>
+                <li>0001, <a href="books.html">books.</a></li>
+                <li>0002, <a href="podcasts.html">podcasts.</a></li>
             </ul>
             <div id="pantone">Pantone 530C</div>
         </div>
