--- a/books.html
+++ b/books.html
@@ -1,7 +1,5 @@
-
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>books.</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
