Added GA-4 gtag.js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
         <title>vid potocnik.</title>
         <link href="static/base.css" rel="stylesheet" type="text/css"/>
         <link rel="shortcut icon" type="image/jpg" href="static/favicon/favicon.ico"/>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-VK41LTPKL0"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-VK41LTPKL0');
+        </script>
     </head>
     <body>
         <div>
