--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <ul style="list-style: none">
         <li>2019-, studying computer science at fri, ljubljana.</li>
         <li>2022-, writing diploma on <a href="https://github.com/potocnikvid/fri-diploma" target="”_blank”"
-          >Kinship analysis</a</li>
+          >Kinship analysis</a></li>
       </ul>
       <strong>previously</strong>
       <ul style="list-style: none">
