--- a/index.html
+++ b/index.html
@@ -38,33 +38,39 @@
         </li>
         <li>
           0002,
+          <a href="https://www.linkedin.com/in/vidpotocnik/" target="”_blank”"
+            >@vidpotocnik</a
+          >, on linkedin.
+        </li>
+        <li>
+          0003,
           <a href="https://instagram.com/vdptcnk" target="”_blank”">@vdptcnk</a
           >, on instagram.
         </li>
         <li>
-          0003,
+          0004,
           <a href="https://instagram.com/vidpotocnik" target="”_blank”"
             >@vidpotocnik</a
           >, on instagram.
         </li>
         <li>
-          0004,
+          0005,
           <a href="https://unsplash.com/@vidpotocnik" target="”_blank”"
             >@vidpotocnik</a
           >, on unsplash.
         </li>
         <li>
-          0005,
+          0006,
           <a href="https://twitter.com/vdptcnk" target="”_blank”">@vdptcnk</a>,
           on twitter.
         </li>
         <li>
-          0006, <a href="https://kit.co/vid" target="”_blank”">@vid</a>, on kit.
+          0007, <a href="https://kit.co/vid" target="”_blank”">@vid</a>, on kit.
         </li>
       </ul>
       <strong>presently</strong>
       <ul style="list-style: none">
-        <li>2019-, studying computer science at fri, ljubljana.</li>
+        <li>2019-, studying computer science at FRI, Ljubljana.</li>
         <li>2022-, writing diploma on <a href="https://github.com/potocnikvid/fri-diploma" target="”_blank”"
           >Kinship analysis</a></li>
       </ul>
@@ -76,13 +82,16 @@
             >i. gimnazija v celju</a
           >
         </li>
+        <li>
+          2019-, Multimedia creator @ Agencija Sinhron d.o.o
+        </li>
       </ul>
-      <strong>stuff</strong>
+      <!-- <strong>stuff</strong>
       <ul style="list-style: none">
         <li>0001, <a href="/pages/books.html">books.</a></li>
-        <li>0002, <a href="/pages/podcasts.html">podcasts.</a></li>
+        <li>0002, <a href="/pages/podcasts.html">podcasts.</a></li> -->
         <!-- <li>0003, <a href="/pages/tictactoe.html">tictactoe.</a></li> -->
-      </ul>
+      <!-- </ul> -->
       <!-- <div id="pantone">Pantone 530C</div> -->
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/threejs/r84/three.min.js"></script>
