--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
       <strong>presence</strong>
       <ul style="list-style: none">
         <li>
+          0000,
+          <a href="/static/Vid_Europass.pdf" target="”_blank”">Resume</a>.
+        </li>
+        <li>
           0001,
           <a href="https://github.com/potocnikvid" target="”_blank”"
             >@potocnikvid</a
